# kwin-effects-baspark

./: CMakeLists.txt  README.md  baspark.cpp  baspark.h  main.cpp  metadata.json
